--- a/templates/shop/product/list.html
+++ b/templates/shop/product/list.html
@@ -37,7 +37,9 @@
   <div class="grid-x grid-margin-x small-up-2 medium-up-3 large-up-4">
     {% for product in products %}
 <div class="cell">
+  <a href="{{ product.get_abolute_url }}">
 <img class="thumbnail" src="{% if product.image %}{{ product.image.url }}{% else %}{% static "images/no-image.jpg" %}{% endif %}">
+  </a>
 <h2 class="text-center"><a href="{{ product.get_abolute_url }}">{{ product.name }}</a></h2>
 <p class="text-center">EUR {{ product.price }}</p>
 </div>
